--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,10 @@ button {
 .auth-nav a {
   color: var(--primary-text-color);
 }
-.site-nav a:hover,
+.site-nav .active {
+  color: var(--accent-color);
+}
+.site-nav .site-nav a:hover,
 .site-nav a:focus,
 .auth-nav a:hover,
 .auth-nav a:focus {
@@ -157,6 +160,10 @@ button {
   color: var(--title-text-color);
   background-color: #f5f4fa;
   border: transparent;
+}
+.porffolio-filter button:hover,
+.porffolio-filter button:focus {
+  color: var(--accent-color);
 }
 
 /* Work-cards */
