--- a/css/style.css
+++ b/css/style.css
@@ -25,14 +25,13 @@ h2,
 h3,
 p,
 ul {
-    margin-top: 0px;
-    margin-bottom: 0px;
+    margin: 0;
+    padding: 0;
 }
 .container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 15px;
-    outline: 2px dashed teal;
 }
 /* site-nav */
 header .container {
@@ -40,6 +39,7 @@ header .container {
     flex-direction: row;
     justify-content: space-between;
     align-items: baseline;
+    border-bottom: 1px solid #ececec;
 }
 .container-nav {
     display: flex;
@@ -75,8 +75,14 @@ header .container {
     width: 307px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: baseline;
+    justify-content: space-between;
+    margin-left: auto;
+    padding-left: 0;
+}
+.auth-nav li {
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 .site-nav a,
 .auth-nav a {
@@ -87,7 +93,7 @@ header .container {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    padding: 0px 0px;
+    padding: 0;
 }
 .auth-nav a {
     color: var(--primary-text-color);
@@ -116,6 +122,9 @@ header .container {
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
+    margin-bottom: 30px;
+    max-width: 700px;
+    margin: 0 auto;
     margin-bottom: 30px;
 }
 .hero button {
@@ -146,9 +155,8 @@ header .container {
 }
 
 /* Features */
-.section {
+.feature-box {
     padding-top: 95px;
-    padding-bottom: 95px;
 }
 .feature-list {
     display: flex;
@@ -191,6 +199,13 @@ header .container {
     display: block;
 }
 /* Our team */
+.section {
+    padding-bottom: 95px;
+    padding-top: 95px;
+}
+.best {
+    background: rgba(245, 244, 250, 1);
+}
 .team {
     display: flex;
     padding-left: 0px;
@@ -219,6 +234,7 @@ header .container {
     text-align: center;
     letter-spacing: 0.03em;
 }
+
 /* Footer */
 .section-last {
     background: rgba(47, 48, 58, 1);
@@ -230,7 +246,9 @@ header .container {
 
 .footer-card .logo {
     display: block;
-    marging-bottom: 20px;
+    margin-bottom: 20px;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 .section-last .accent-secondary {
     color: #ffffff;
@@ -263,31 +281,73 @@ header .container {
 
 /* PORTFLIO PAGE */
 /* Work filter */
+.porffolio-filter {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
 .porffolio-filter button {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.63;
     text-align: center;
     letter-spacing: 0.03em;
-
+    background-color: var(--primary-text-color);
+    padding: 6px 22px;
     color: var(--title-text-color);
     background-color: #f5f4fa;
     border: transparent;
+    border-radius: 4px;
+    margin-right: 8px;
+}
+.porffolio-filter li:last-child button {
+    margin-right: 0;
 }
 .porffolio-filter button:hover,
 .porffolio-filter button:focus {
     color: #ffffff;
     background-color: var(--accent-color);
 }
-
+.porffolio-filter .active-filter {
+    background-color: var(--accent-color);
+    color: #ffffff;
+}
 /* Work-cards */
+.work-card {
+    display: flex;
+    margin-top: 30px;
+    padding-bottom: 94px;
+    flex-wrap: wrap;
+}
+.work-card li {
+    width: 370px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    background: #ffffff;
+    border-bottom: 1px solid #eeeeee;
+}
+
+.work-card li:nth-child(3n) {
+    margin-right: 0;
+}
+.work-card li:nth-last-child(-n + 2) {
+    margin-bottom: 0px;
+}
+.work-card img {
+    overflow: hidden;
+}
+.port-card {
+    padding: 20px 24px;
+}
+
 .portfolio-title {
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
-
     color: var(--title-text-color);
+    margin-bottom: 4px;
 }
 .portfolio-work-title {
     font-weight: 400;
