--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
     --title-text-color: #212121;
     --accent-color: #2196f3;
     --portfolio-title-text-color: rgba(33, 33, 33, 1);
+    --white-color: #fff;
 }
 body {
     color: var(--primary-text-color);
@@ -28,31 +29,49 @@ ul {
     margin: 0;
     padding: 0;
 }
+
+*,
+*::before,
+*::after {
+    margin: 0;
+    padding: 0;
+}
+ul li {
+    list-style: none;
+}
+a {
+    text-decoration: none;
+}
+img {
+    display: block;
+}
+button {
+    border: none;
+}
 .container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 15px;
 }
 /* site-nav */
-header .container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: baseline;
+.header-page {
     border-bottom: 1px solid #ececec;
+}
+.header-container {
+    display: flex;
+    justify-content: space-between;
 }
 .container-nav {
     display: flex;
-    flex-direction: row;
-    align-items: baseline;
 }
-.nav {
-    width: 294px;
+.site-nav {
     display: flex;
-    justify-content: space-between;
     margin-left: 93px;
 }
-.nav li {
+.site-nav-item:not(:last-child) {
+    margin-right: 50px;
+}
+.site-nav-item {
     padding-top: 32px;
     padding-bottom: 32px;
 }
@@ -72,39 +91,39 @@ header .container {
     padding: 25px 0px;
 }
 .auth-nav {
-    width: 307px;
     display: flex;
     flex-direction: row;
     align-items: baseline;
     justify-content: space-between;
     margin-left: auto;
-    padding-left: 0;
 }
-.auth-nav li {
+.auth-nav-item {
     padding-top: 32px;
     padding-bottom: 32px;
 }
-.site-nav a,
-.auth-nav a {
-    color: var(--title-text-color);
+.auth-nav-item:not(:first-child) {
+    margin-left: 50px;
+}
+.site-nav-link,
+.auth-nav-link {
     text-decoration: none;
     font-family: Roboto;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    padding: 0;
 }
-.auth-nav a {
+.site-nav-link {
+    color: var(--title-text-color);
+}
+.auth-nav-link {
     color: var(--primary-text-color);
 }
-.site-nav .active {
+.site-nav-item .active {
     color: var(--accent-color);
 }
-.site-nav a:hover,
-.site-nav a:focus,
-.auth-nav a:hover,
-.auth-nav a:focus {
+.site-nav-link:hover,
+.auth-nav-link:hover {
     color: var(--accent-color);
 }
 
@@ -115,7 +134,7 @@ header .container {
     padding-bottom: 200px;
 }
 .hero-title {
-    color: #ffffff;
+    color: var(--white-color);
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -127,29 +146,25 @@ header .container {
     margin: 0 auto;
     margin-bottom: 30px;
 }
-.hero button {
-    display: inline-block;
+.btn {
+    display: block;
     background-color: var(--accent-color);
-    color: #ffffff;
+    color: var(--white-color);
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
-    display: flex;
-    align-items: center;
     text-align: center;
     text-decoration: none;
     letter-spacing: 0.06em;
     min-width: 200px;
-    height: 50px;
+    min-height: 50px;
     padding: 10px 32px;
-    border: 1px;
-    border-color: var(--accent-color);
-    border-radius: 4px;
     margin: 0 auto;
+    border-radius: 4px;
 }
-.hero button:hover,
-.hero button:focus {
-    background-color: #ffffff;
+.hero .btn:hover,
+.hero .btn:focus {
+    background-color: var(--white-color);
     color: var(--accent-color);
     border-color: var(--accent-color);
 }
@@ -160,7 +175,6 @@ header .container {
 }
 .feature-list {
     display: flex;
-    padding-left: 0px;
     justify-content: space-between;
 }
 .feature-list .title {
@@ -172,7 +186,7 @@ header .container {
     text-transform: uppercase;
     margin-bottom: 10px;
 }
-.feature-list p {
+.feature-text {
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
@@ -188,7 +202,6 @@ header .container {
     line-height: 42px;
     text-align: center;
     letter-spacing: 0.03em;
-    margin-bottom: 50px;
 }
 .work-fotos {
     display: flex;
@@ -211,14 +224,17 @@ header .container {
     padding-left: 0px;
     justify-content: space-between;
 }
+.team-item {
+    background: var(--white-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+}
 .team-member {
     display: block;
     padding-top: 30px;
     padding-bottom: 30px;
 }
-.team-member h3 {
-    margin-bottom: 10px;
-}
+
 .team-title {
     color: var(--title-text-color);
     font-weight: 500;
@@ -226,8 +242,9 @@ header .container {
     line-height: 1.19;
     text-align: center;
     letter-spacing: 0.03em;
+    margin-bottom: 10px;
 }
-.team p {
+.team-text {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.19;
@@ -239,7 +256,7 @@ header .container {
 .section-last {
     background: rgba(47, 48, 58, 1);
 }
-.section-last .container {
+.section-last {
     padding-top: 60px;
     padding-bottom: 60px;
 }
@@ -250,32 +267,32 @@ header .container {
     padding-top: 0;
     padding-bottom: 0;
 }
-.section-last .accent-secondary {
-    color: #ffffff;
+.footer-address {
+    font-style: inherit;
+    color: var(--white-color);
 }
-.footer-raws address,
-.footer-raws a {
+.section-last .accent-secondary {
+    color: var(--white-color);
+}
+.footer-list {
     display: block;
-    color: #ffffff;
+    color: var(--white-color);
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.72;
     letter-spacing: 0.03em;
+}
+.footer-list:not(:last-child) {
     margin-bottom: 9px;
 }
-.footer-raws {
-    padding-left: 0px;
-}
-.footer-raws li:last-child a {
-    margin-bottom: 0px;
-}
-.footer-raws a {
+
+.footer-link {
     color: rgba(255, 255, 255, 0.6);
     text-decoration: none;
 }
-.footer-raws a:hover,
-.footer-raws a:focus {
+.footer-link:hover,
+.footer-link:focus {
     color: var(--accent-color);
 }
 
@@ -284,10 +301,9 @@ header .container {
 .porffolio-filter {
     display: flex;
     justify-content: center;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
-
-.porffolio-filter button {
+.prt-btn {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.63;
@@ -297,45 +313,44 @@ header .container {
     padding: 6px 22px;
     color: var(--title-text-color);
     background-color: #f5f4fa;
-    border: transparent;
     border-radius: 4px;
     margin-right: 8px;
 }
-.porffolio-filter li:last-child button {
+.porffolio-filter li:last-child .prt-btn {
     margin-right: 0;
 }
-.porffolio-filter button:hover,
-.porffolio-filter button:focus {
-    color: #ffffff;
+.prt-btn:hover,
+.prt-btn:focus {
+    color: var(--white-color);
     background-color: var(--accent-color);
 }
 .porffolio-filter .active-filter {
     background-color: var(--accent-color);
-    color: #ffffff;
+    color: var(--white-color);
 }
 /* Work-cards */
 .work-card {
     display: flex;
-    margin-top: 30px;
-    padding-bottom: 94px;
     flex-wrap: wrap;
 }
-.work-card li {
+.work-card-item {
     width: 370px;
     margin-right: 30px;
     margin-bottom: 30px;
-    background: #ffffff;
+    background: var(--white-color);
     border-bottom: 1px solid #eeeeee;
+    border-left: 1px solid #eeeeee;
+    border-right: 1px solid #eeeeee;
 }
 
-.work-card li:nth-child(3n) {
+.work-card-item:nth-child(3n) {
     margin-right: 0;
 }
-.work-card li:nth-last-child(-n + 2) {
+.work-card-item:nth-last-child(-n + 3) {
     margin-bottom: 0px;
 }
-.work-card img {
-    overflow: hidden;
+.work-card-img {
+    width: 100%;
 }
 .port-card {
     padding: 20px 24px;
@@ -354,8 +369,7 @@ header .container {
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
-
-    color: vsr(--primary-text-color);
+    color: var(--primary-text-color);
 }
 .portfolio-work-item {
     font-weight: 400;
@@ -363,6 +377,6 @@ header .container {
     line-height: 1.88;
     letter-spacing: 0.03em;
 
-    color: #ffffff;
+    color: var(--white-color);
     background-color: var(--accent-color);
 }
