--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@
     --accent-color: #2196f3;
     --portfolio-title-text-color: rgba(33, 33, 33, 1);
     --white-color: #fff;
+    --transition-duration: 250ms;
+    --transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 body {
     color: var(--primary-text-color);
@@ -66,15 +68,30 @@ button {
 }
 .site-nav {
     display: flex;
+    align-items: center;
     margin-left: 93px;
 }
+
+.active {
+    position: relative;
+}
+
+.active::after {
+    position: absolute;
+    display: block;
+    content: '';
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background: var(--accent-color);
+    top: 47px;
+    opacity: 1;
+}
+
 .site-nav-item:not(:last-child) {
     margin-right: 50px;
 }
-.site-nav-item {
-    padding-top: 32px;
-    padding-bottom: 32px;
-}
+
 .logo {
     color: var(--accent-color);
     text-decoration: none;
@@ -112,6 +129,9 @@ button {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+    transition-property: color;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: (--transition-timing-function);
 }
 .site-nav-link {
     color: var(--title-text-color);
@@ -141,16 +161,24 @@ button {
 }
 
 .btn-mail {
+    display: block;
     fill: var(--primary-text-color);
     margin-right: 10px;
+    transition-property: fill;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: (--transition-timing-function);
 }
-.btn-mail:hover {
+.btn-mail:hover,
+.btn-mail:focus {
     fill: var(--accent-color);
-    margin-right: 10px;
 }
 .btn-phone {
     fill: var(--primary-text-color);
     margin-right: 10px;
+    display: block;
+    transition-property: fill;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: (--transition-timing-function);
 }
 .btn-phone:hover,
 .btn-phone:focus {
@@ -196,13 +224,68 @@ button {
     padding: 10px 32px;
     margin: 0 auto;
     border-radius: 4px;
+    transition-property: background-color, color;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: (--transition-timing-function);
 }
 .hero .btn:hover,
 .hero .btn:focus {
     background-color: var(--white-color);
     color: var(--accent-color);
-    border-color: var(--accent-color);
 }
+/* Modal */
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.2);
+    z-index: 3;
+    opacity: 1;
+    transition: opacity var(--transition-timing-function) var(--transition-duration);
+}
+.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+}
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(0.8);
+}
+.modal {
+    position: absolute;
+    z-index: 3;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    min-width: 528px;
+    min-height: 581px;
+    background: rgba(255, 255, 255, 1);
+    border-radius: 4px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.btn-close {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 8px;
+    right: 8px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: var(--white-color);
+    padding: 6px;
+}
+
+.btn-close-icon {
+    fill: #000;
+}
+
+*/
 
 /* Features */
 .section-title {
@@ -251,14 +334,35 @@ button {
     line-height: 42px;
     text-align: center;
     letter-spacing: 0.03em;
+    margin-bottom: 50px;
 }
 .work-fotos {
     display: flex;
     justify-content: space-between;
     padding-left: 0px;
+    z-index: 1;
+}
+.work-img-cont {
+    position: relative;
+    z-index: 1;
 }
 .card-image {
     display: block;
+}
+.card-image-cont {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    min-height: 70px;
+    background: rgba(47, 48, 58, 0.8);
+    padding-top: 27px;
+    padding-bottom: 27px;
+}
+.card-image-tittle {
+    text-transform: uppercase;
+    color: var(--white-color);
+    text-align: center;
 }
 /* Our team */
 .section {
@@ -320,6 +424,9 @@ button {
     border-radius: 50%;
     text-align: center;
     padding: 12px;
+    transition-property: background-color;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: (--transition-timing-function);
 }
 .social-link:hover {
     background-color: var(--accent-color);
@@ -329,7 +436,11 @@ button {
     fill: var(--white-color);
 }
 .social-logo {
+    display: block;
     fill: rgba(175, 177, 184, 1);
+    transition-property: fill;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: (--transition-timing-function);
 }
 .social-logo:hover {
     fill: var(--white-color);
@@ -348,6 +459,9 @@ button {
     border: 1px solid #afb1b8;
     border-radius: 4px;
     padding: 16px 32px;
+    transition-property: border-color;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: (--transition-timing-function);
 }
 .client-link:hover .client-logo,
 .client-link:focus .client-logo {
@@ -358,7 +472,11 @@ button {
     border-color: var(--accent-color);
 }
 .client-logo {
+    display: block;
     fill: rgba(175, 177, 184, 1);
+    transition-property: fill;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: (--transition-timing-function);
 }
 .client-logo:hover,
 .client-logo:focus {
@@ -409,8 +527,12 @@ button {
 }
 
 .footer-link {
+    display: block;
     color: rgba(255, 255, 255, 0.6);
     text-decoration: none;
+    transition-property: color;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: (--transition-timing-function);
 }
 .footer-link:hover,
 .footer-link:focus {
@@ -446,6 +568,9 @@ button {
     border-radius: 50%;
     text-align: center;
     padding: 12px;
+    transition-property: background-color;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: (--transition-timing-function);
 }
 .footer-social-item:not(:last-child) {
     margin-right: 10px;
@@ -465,6 +590,7 @@ button {
     margin-bottom: 50px;
 }
 .prt-btn {
+    display: block;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.63;
@@ -476,6 +602,9 @@ button {
     background-color: #f5f4fa;
     border-radius: 4px;
     margin-right: 8px;
+    transition-property: background-color, color;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: (--transition-timing-function);
 }
 .porffolio-filter li:last-child .prt-btn {
     margin-right: 0;
@@ -495,6 +624,7 @@ button {
     flex-wrap: wrap;
 }
 .work-card-item {
+    display: block;
     width: 370px;
     margin-right: 30px;
     margin-bottom: 30px;
@@ -504,6 +634,9 @@ button {
     border-right: 1px solid #eeeeee;
     background: #ffffff;
     border: 1px solid #eeeeee;
+    transition-property: box-shadow, opacity;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: (--transition-timing-function);
 }
 .work-card-item:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -514,7 +647,37 @@ button {
 .work-card-item:nth-last-child(-n + 3) {
     margin-bottom: 0px;
 }
+.work-card-cont {
+    position: relative;
+    overflow: hidden;
+}
+.work-card-opacity {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(33, 150, 243, 0.9);
+    padding: 63px 23px;
+    opacity: 0;
+    transition-property: transform, opacity;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: (--transition-timing-function);
+    transform: translateY(100%);
+}
+.work-card-item:hover .work-card-opacity {
+    opacity: 1;
+    transform: translateY(0%);
+}
+.work-opacity-text {
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    color: var(--white-color);
+}
 .work-card-img {
+    display: block;
     width: 100%;
 }
 .port-card {
