--- a/css/style.css
+++ b/css/style.css
@@ -264,6 +264,7 @@ button {
     background: rgba(255, 255, 255, 1);
     border-radius: 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    padding: 40px;
 }
 
 .btn-close {
@@ -280,13 +281,158 @@ button {
     background-color: var(--white-color);
     padding: 6px;
 }
-
+.btn-close:hover .btn-close-icon {
+    fill: var(--accent-color);
+}
 .btn-close-icon {
     fill: #000;
 }
+.form-person,
+.form-phone,
+.form-mail {
+    position: relative;
+    margin-bottom: 10px;
+    padding-top: 28px;
+}
+.modal-title {
+    color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-bottom: 12px;
+}
+.form-label {
+    position: absolute;
+    top: 20px;
+    left: 0;
+    transform: translateY(-50%);
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+}
+.form-input {
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+    margin: 0;
+    min-height: 40px;
+    padding: 12px 16px 12px 42px;
+    width: 100%;
+    font: inherit;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    outline: none;
+    cursor: pointer;
+}
+.form-input:focus,
+.form-input:hover,
+.form-input:active {
+    border-color: var(--accent-color);
+}
 
-*/
+.icone-person,
+.icone-phone,
+.icone-mail {
+    position: absolute;
+    top: 40px;
+    left: 12px;
+    fill: var(--primary-text-color);
+}
 
+.form-input:focus ~ .icn,
+.form-input:hover ~ .icn,
+.form-input:active ~ .icn {
+    fill: var(--accent-color);
+}
+
+.icone-person:hover,
+.icone-phone:hover,
+.icone-mail:hover,
+.icone-person:focus,
+.icone-phone:focus,
+.icone-mail:focus {
+    fill: var(--accent-color);
+}
+.form-coment {
+    min-height: 120px;
+    position: relative;
+    padding-top: 28px;
+    margin-bottom: 20px;
+}
+
+.coment {
+    min-height: 120px;
+    padding: 12px 16px;
+}
+.form-checkbox {
+    position: relative;
+    margin-bottom: 30px;
+}
+.checkbox-label {
+    display: inline-block;
+    margin-left: 25px;
+}
+.checkbox-input {
+    position: absolute;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    appearance: none;
+}
+.checkbox-input:checked ~ .bg-icn {
+    background-color: var(--accent-color);
+}
+.form-a {
+    display: inline-block;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    text-decoration-line: underline;
+    color: var(--accent-color);
+}
+.bg-icn {
+    position: absolute;
+    top: 3px;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 16px;
+    height: 15px;
+    background-color: var(--white-color);
+    border-radius: 2px;
+    margin-left: 7px;
+}
+.icn-yes {
+    display: inline-block;
+    fill: var(--white-color);
+    background: var(--accent-color);
+    border: 0.2px solid #ffffff;
+}
+.btn-form-close {
+    display: flex;
+    justify-content: center;
+}
+.form-close {
+    font-family: inherit;
+    background-color: var(--accent-color);
+    color: var(--white-color);
+    min-width: 200px;
+    min-height: 50px;
+    padding: 10px 55px;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    transition: background-color --transition-duration --transition-timing-function,
+        color --transition-duration --transition-timing-function;
+}
+.form-close:hover,
+.form-close:focus {
+    background-color: var(--white-color);
+    color: var(--accent-color);
+}
 /* Features */
 .section-title {
     margin-bottom: 50px;
@@ -450,8 +596,7 @@ button {
     display: flex;
     justify-content: space-between;
 }
-.client-item {
-}
+
 .client-link {
     display: block;
     width: 170px;
@@ -497,7 +642,7 @@ button {
 .footer-card-left {
     min-width: 231px;
 }
-.footer-card-right {
+.footer-card-center {
     margin-left: 70px;
 }
 .footer-card-left .logo {
@@ -581,6 +726,69 @@ button {
 .footer-social-link:hover,
 .footer-social-link:focus {
     background-color: var(--accent-color);
+}
+.footer-card-right {
+    display: flex;
+    justify-content: baseline;
+    margin-left: 93px;
+}
+.footer-title2a {
+    margin-bottom: 20px;
+}
+.footer-card-right1 {
+    min-width: 358px;
+}
+.footer-card-right2 {
+    position: relative;
+    margin-left: 12px;
+}
+.submit-input {
+    display: flex;
+    align-items: center;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    padding: 15px 16px;
+    background-color: transparent;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
+    border-color: var(--white-color);
+}
+.submit-input:focus,
+.submit-input:hover {
+    border-color: var(--accent-color);
+}
+
+.btn-submit {
+    display: flex;
+    align-items: center;
+    min-width: 200px;
+    min-height: 50px;
+    background-color: var(--accent-color);
+    color: var(--white-color);
+    font-family: inherit;
+    border-radius: 4px;
+    padding-left: 29px;
+    margin-top: 36px;
+    transition: background-color --transition-duration --transition-timing-function,
+        color --transition-duration --transition-timing-function;
+}
+.btn-submit:hover,
+.btn-submit:focus {
+    background-color: var(--white-color);
+    color: var(--accent-color);
+}
+.btn-submit:hover ~ .icon-send,
+.btn-submit:focus ~ .icon-send {
+    fill: var(--accent-color);
+}
+.icon-send {
+    position: absolute;
+    fill: var(--white-color);
+    top: 36px;
+    right: 28px;
+    transform: translateY(50%);
 }
 /* PORTFOLIO PAGE */
 /* Work filter */
