--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
     --transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 body {
+    position: relative;
     color: var(--primary-text-color);
     background-color: #ffffff;
     font-family: 'Roboto', sans-serif;
@@ -292,7 +293,7 @@ button {
 .form-mail {
     position: relative;
     margin-bottom: 10px;
-    padding-top: 28px;
+    min-height: 58px;
 }
 .modal-title {
     color: var(--title-text-color);
@@ -304,13 +305,15 @@ button {
     margin-bottom: 12px;
 }
 .form-label {
-    position: absolute;
-    top: 20px;
-    left: 0;
-    transform: translateY(-50%);
+    display: block;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.01em;
+    margin-bottom: 4px;
+}
+.modal-input {
+    display: block;
+    position: relative;
 }
 .form-input {
     font-size: 12px;
@@ -337,80 +340,86 @@ button {
 .icone-phone,
 .icone-mail {
     position: absolute;
-    top: 40px;
+    top: 50%;
     left: 12px;
+    transform: translateY(-50%);
     fill: var(--primary-text-color);
 }
 
-.form-input:focus ~ .icn,
-.form-input:hover ~ .icn,
-.form-input:active ~ .icn {
-    fill: var(--accent-color);
-}
-
-.icone-person:hover,
-.icone-phone:hover,
-.icone-mail:hover,
-.icone-person:focus,
-.icone-phone:focus,
-.icone-mail:focus {
+.modal-input:focus .icn,
+.modal-input:hover .icn {
     fill: var(--accent-color);
 }
 .form-coment {
     min-height: 120px;
     position: relative;
-    padding-top: 28px;
     margin-bottom: 20px;
+}
+.coment::placeholder {
+    font-size: 12px;
+    padding-top: 7px;
+    line-height: 1.17px;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
 }
 
 .coment {
     min-height: 120px;
     padding: 12px 16px;
+    resize: none;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
 }
 .form-checkbox {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
     position: relative;
     margin-bottom: 30px;
 }
 .checkbox-label {
-    display: inline-block;
-    margin-left: 25px;
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    line-height: 1.72;
+    letter-spacing: 0.03em;
 }
 .checkbox-input {
-    position: absolute;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    appearance: none;
 }
-.checkbox-input:checked ~ .bg-icn {
-    background-color: var(--accent-color);
+.bg-icn {
+    display: block;
+    width: 16px;
+    height: 15px;
+    border-style: solid;
+    border-radius: 2px;
+    border-width: 1px;
+    border-color: #000;
+    padding: 4px 2px 3px 2px;
+    margin-left: 7px;
+    margin-right: 7px;
 }
+
+.checkbox-input:checked + .bg-icn {
+    background: var(--accent-color);
+    border-color: var(--accent-color);
+}
+
 .form-a {
-    display: inline-block;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     text-decoration-line: underline;
     color: var(--accent-color);
+    margin-left: 4px;
 }
-.bg-icn {
-    position: absolute;
-    top: 3px;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 16px;
-    height: 15px;
-    background-color: var(--white-color);
-    border-radius: 2px;
-    margin-left: 7px;
-}
+
 .icn-yes {
-    display: inline-block;
+    display: block;
     fill: var(--white-color);
-    background: var(--accent-color);
-    border: 0.2px solid #ffffff;
 }
 .btn-form-close {
     display: flex;
@@ -754,6 +763,12 @@ button {
     letter-spacing: 0.03em;
     color: var(--primary-text-color);
     border-color: var(--white-color);
+}
+.submit-input::placeholder {
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
 }
 .submit-input:focus,
 .submit-input:hover {
