--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -79,18 +79,6 @@ ul {
   padding: 25px 0px;
 }
 
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.2);
-  z-index: 3;
-  opacity: 1;
-  transition: opacity cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-}
-
 .btn {
   display: block;
   background-color: #2196f3;
@@ -109,47 +97,6 @@ ul {
   transition-property: background-color, color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0.8);
-}
-
-.modal {
-  position: absolute;
-  z-index: 3;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1);
-  min-width: 528px;
-  min-height: 581px;
-  background: white;
-  border-radius: 4px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  padding: 40px;
-}
-
-.btn-close {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  top: 8px;
-  right: 8px;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  background-color: #fff;
-  padding: 6px;
-}
-
-.btn-close:hover .btn-close__icon {
-  fill: #2196f3;
-}
-
-.btn-close__icon {
-  fill: #000;
 }
 
 .section__title {
@@ -321,369 +268,145 @@ ul {
   fill: #2196f3;
 }
 
-/* Hero */
-.hero {
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/background.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 1600px 600px;
-  padding-top: 200px;
-  padding-bottom: 200px;
+/* Work-cards */
+.work-card {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.hero__title {
-  color: #fff;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  margin-bottom: 30px;
-  max-width: 700px;
-  margin: 0 auto;
-  margin-bottom: 30px;
-}
-
-.hero .btn:hover,
-.hero .btn:focus {
-  background-color: #fff;
-  color: #2196f3;
-}
-
-/* Modal */
-.person__form,
-.phone__form,
-.mail__form {
-  position: relative;
-  margin-bottom: 10px;
-  min-height: 58px;
-}
-
-.modal__title {
-  color: #212121;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
-  letter-spacing: 0.03em;
-  margin-bottom: 12px;
-}
-
-.form-label {
+.work-card-item {
   display: block;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  background: #fff;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+  transition-property: box-shadow, opacity;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.work-card-item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.work-card-item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.work-card-item:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
+}
+
+.work-card-item:hover .work-card-opacity {
+  opacity: 1;
+  transform: translateY(0%);
+}
+
+.work-card-cont {
+  position: relative;
+  overflow: hidden;
+}
+
+.work-card-opacity {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(33, 150, 243, 0.9);
+  padding: 63px 23px;
+  opacity: 0;
+  transition-property: transform, opacity;
+  transition-duration: transition-duration;
+  transition-timing-function: transition-timing-function;
+  transform: translateY(100%);
+}
+
+.work-opacity-text {
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: #fff;
+}
+
+.work-card-img {
+  display: block;
+  width: 100%;
+}
+
+.port-card {
+  padding: 20px 24px;
+}
+
+.portfolio-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: #212121;
   margin-bottom: 4px;
 }
 
-.modal-input {
-  display: block;
-  position: relative;
+.portfolio-work-title {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.03em;
+  color: #757575;
 }
 
-.modal-input:focus .icn,
-.modal-input:hover .icn {
-  fill: #2196f3;
+.portfolio-work-item {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.03em;
+  color: #fff;
+  background-color: #2196f3;
 }
 
-.form-input {
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
-  margin: 0;
-  min-height: 40px;
-  padding: 12px 16px 12px 42px;
-  width: 100%;
-  font: inherit;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  outline: none;
-  cursor: pointer;
-}
-
-.form-input:focus, .form-input:hover, .form-input:active {
-  border-color: #2196f3;
-}
-
-.icone-person,
-.icone-phone,
-.icone-mail {
-  position: absolute;
-  top: 50%;
-  left: 12px;
-  transform: translateY(-50%);
-  fill: #757575;
-}
-
-.form-coment {
-  min-height: 120px;
-  position: relative;
-  margin-bottom: 20px;
-}
-
-.coment {
-  min-height: 120px;
-  padding: 12px 16px;
-  resize: none;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-}
-
-.coment::placeholder {
-  font-size: 12px;
-  padding-top: 7px;
-  line-height: 1.17px;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
-}
-
-.checkbox {
+/* Work filter */
+.porffolio-filter {
   display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-  position: relative;
-  margin-bottom: 30px;
+  justify-content: center;
+  margin-bottom: 50px;
 }
 
-.checkbox__label {
-  display: flex;
-  align-items: center;
-  font-size: 14px;
-  line-height: 1.72;
-  letter-spacing: 0.03em;
+.porffolio-filter .porffolio-filter__item:last-child .prt-btn {
+  margin-right: 0;
 }
 
-.checkbox__input {
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-}
-
-.checkbox:checked + .bg-icn {
-  background: #2196f3;
-  border-color: #2196f3;
-}
-
-.checkbox_link {
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  text-decoration-line: underline;
-  color: #2196f3;
-  margin-left: 4px;
-}
-
-.bg-icn {
-  display: block;
-  width: 16px;
-  height: 15px;
-  border-style: solid;
-  border-radius: 2px;
-  border-width: 1px;
-  border-color: #000;
-  padding: 4px 2px 3px 2px;
-  margin-left: 7px;
-  margin-right: 7px;
-}
-
-.icn-yes {
-  display: block;
-  fill: #fff;
-}
-
-.form-close {
-  display: block;
-  margin: 0 auto;
-  font-family: inherit;
+.porffolio-filter .active-filter {
   background-color: #2196f3;
   color: #fff;
-  min-width: 200px;
-  min-height: 50px;
-  padding: 10px 55px;
-  border-radius: 4px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-close:hover, .form-close:focus {
-  background-color: #fff;
-  color: #2196f3;
-}
-
-/* Features */
-.feature {
-  padding-top: 95px;
-}
-
-.feature__list {
-  display: flex;
-  justify-content: space-between;
-}
-
-.feature__title {
-  color: #212121;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  margin-bottom: 10px;
-}
-
-.feature__iconbox {
-  display: inline-block;
-  background: #f5f4fa;
-  width: 270px;
-  height: 120px;
-  border-radius: 4px;
-  margin-bottom: 30px;
-  text-align: center;
-  padding-top: 25px;
-  padding-bottom: 25px;
-}
-
-.feature__text {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  width: 270px;
-}
-
-/* work examples */
-.work-fotos {
-  display: flex;
-  justify-content: space-between;
-  padding-left: 0px;
-  z-index: 1;
-}
-
-.work-img {
-  position: relative;
-  z-index: 1;
-}
-
-.work-img__cont {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  min-height: 70px;
-  background: rgba(47, 48, 58, 0.8);
-  padding-top: 27px;
-  padding-bottom: 27px;
-}
-
-.work-img__tittle {
-  text-transform: uppercase;
-  color: #fff;
-  text-align: center;
-}
-
-.work-img__photo {
+.prt-btn {
   display: block;
-}
-
-/* Our team */
-.best {
-  background: #f5f4fa;
-}
-
-.team {
-  display: flex;
-  padding-left: 0px;
-  justify-content: space-between;
-}
-
-.team__item {
-  background: #fff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
-
-.team__member {
-  display: block;
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.team__title {
-  color: #212121;
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.19;
+  line-height: 1.63;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-bottom: 10px;
-}
-
-.team__text {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
-  letter-spacing: 0.03em;
-  margin-bottom: 16px;
-}
-
-.social-link:hover .social-logo,
-.social-link:focus .social-log {
-  fill: #fff;
-}
-
-.social-logo {
-  display: block;
-  fill: #afb1b8;
-  transition-property: fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social-logo:hover {
-  fill: #fff;
-}
-
-/* Regular customers */
-.client-list {
-  display: flex;
-  justify-content: space-between;
-}
-
-.client-link {
-  display: block;
-  width: 170px;
-  height: 92px;
-  border: 1px solid #afb1b8;
+  background-color: #757575;
+  padding: 6px 22px;
+  color: #212121;
+  background-color: #f5f4fa;
   border-radius: 4px;
-  padding: 16px 32px;
-  transition-property: border-color;
+  margin-right: 8px;
+  transition-property: background-color, color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.client-link:hover, .client-link:focus {
-  border-color: #2196f3;
-}
-
-.client-link:hover .client-logo,
-.client-link:focus .client-logo {
-  fill: #2196f3;
-}
-
-.client-link__logo {
-  display: block;
-  fill: #afb1b8;
-  transition-property: fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.client-link__logo__logo:hover, .client-link__logo__logo:focus {
-  fill: #2196f3;
+.prt-btn:hover, .prt-btn:focus {
+  color: #fff;
+  background-color: #2196f3;
 }
 
 /* Footer */
@@ -866,4 +589,4 @@ ul {
   margin-left: 10px;
   fill: #fff;
 }
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=portfolio.css.map */
