--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ button {
     letter-spacing: 0.02em;
     transition-property: color;
     transition-duration: var(--transition-duration);
-    transition-timing-function: (--transition-timing-function);
+    transition-timing-function: var(--transition-timing-function);
 }
 .site-nav-link {
     color: var(--title-text-color);
@@ -166,7 +166,7 @@ button {
     margin-right: 10px;
     transition-property: fill;
     transition-duration: var(--transition-duration);
-    transition-timing-function: (--transition-timing-function);
+    transition-timing-function: var(--transition-timing-function);
 }
 .btn-mail:hover,
 .btn-mail:focus {
@@ -178,7 +178,7 @@ button {
     display: block;
     transition-property: fill;
     transition-duration: var(--transition-duration);
-    transition-timing-function: (--transition-timing-function);
+    transition-timing-function: var(--transition-timing-function);
 }
 .btn-phone:hover,
 .btn-phone:focus {
@@ -226,7 +226,7 @@ button {
     border-radius: 4px;
     transition-property: background-color, color;
     transition-duration: var(--transition-duration);
-    transition-timing-function: (--transition-timing-function);
+    transition-timing-function: var(--transition-timing-function);
 }
 .hero .btn:hover,
 .hero .btn:focus {
@@ -432,8 +432,8 @@ button {
     padding: 10px 55px;
     border-radius: 4px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    transition: background-color --transition-duration --transition-timing-function,
-        color --transition-duration --transition-timing-function;
+    transition: background-color var(--transition-duration) var(--transition-timing-function),
+        color var(--transition-duration) var(--transition-timing-function);
 }
 .form-close:hover,
 .form-close:focus {
@@ -628,7 +628,7 @@ button {
     fill: rgba(175, 177, 184, 1);
     transition-property: fill;
     transition-duration: var(--transition-duration);
-    transition-timing-function: (--transition-timing-function);
+    transition-timing-function: var(--transition-timing-function);
 }
 .client-logo:hover,
 .client-logo:focus {
@@ -684,7 +684,7 @@ button {
     text-decoration: none;
     transition-property: color;
     transition-duration: var(--transition-duration);
-    transition-timing-function: (--transition-timing-function);
+    transition-timing-function: var(--transition-timing-function);
 }
 .footer-link:hover,
 .footer-link:focus {
@@ -722,7 +722,7 @@ button {
     padding: 12px;
     transition-property: background-color;
     transition-duration: var(--transition-duration);
-    transition-timing-function: (--transition-timing-function);
+    transition-timing-function: var(--transition-timing-function);
 }
 .footer-social-item:not(:last-child) {
     margin-right: 10px;
@@ -823,7 +823,7 @@ button {
     margin-right: 8px;
     transition-property: background-color, color;
     transition-duration: var(--transition-duration);
-    transition-timing-function: (--transition-timing-function);
+    transition-timing-function: var(--transition-timing-function);
 }
 .porffolio-filter li:last-child .prt-btn {
     margin-right: 0;
@@ -855,7 +855,7 @@ button {
     border: 1px solid #eeeeee;
     transition-property: box-shadow, opacity;
     transition-duration: var(--transition-duration);
-    transition-timing-function: (--transition-timing-function);
+    transition-timing-function: var(--transition-timing-function);
 }
 .work-card-item:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -882,7 +882,7 @@ button {
     opacity: 0;
     transition-property: transform, opacity;
     transition-duration: var(--transition-duration);
-    transition-timing-function: (--transition-timing-function);
+    transition-timing-function: var(--transition-timing-function);
     transform: translateY(100%);
 }
 .work-card-item:hover .work-card-opacity {
