--- a/css/main.css
+++ b/css/main.css
@@ -70,13 +70,6 @@ ul {
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  padding-top: 24px;
-  padding-bottom: 25px;
-}
-
-.logo.accent {
-  color: #000;
-  padding: 25px 0px;
 }
 
 .backdrop {
@@ -173,15 +166,11 @@ ul {
   align-items: center;
 }
 
-.social-item:not(:last-child) {
-  margin-right: 10px;
-}
-
 .social-link {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #fff;
+  background-color: transparent;
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -194,6 +183,10 @@ ul {
 
 .social-link:hover {
   background-color: #2196f3;
+}
+
+.social-item:not(:last-child) {
+  margin-right: 10px;
 }
 
 /* site-nav */
@@ -222,6 +215,15 @@ ul {
   align-items: center;
   justify-content: space-between;
   margin-left: auto;
+}
+
+.logo-header {
+  padding-top: 24px;
+  padding-bottom: 25px;
+}
+
+.logo-header .nav_color_dark {
+  color: #000 !important;
 }
 
 .active {
@@ -630,8 +632,16 @@ ul {
   margin-bottom: 16px;
 }
 
+.social-item-team:not(:last-child) {
+  margin-right: 10px;
+}
+
+.social-link_background-color_light {
+  background-color: #fff;
+}
+
 .social-link:hover .social-logo,
-.social-link:focus .social-log {
+.social-link:focus .social-logo {
   fill: #fff;
 }
 
@@ -693,10 +703,6 @@ ul {
   padding-bottom: 60px;
 }
 
-.section-last .accent-secondary {
-  color: #fff;
-}
-
 .container-footer {
   display: flex;
   align-items: baseline;
@@ -706,11 +712,15 @@ ul {
   min-width: 231px;
 }
 
-.footer-card-left .logo {
+.logo-footer {
   display: block;
   margin-bottom: 20px;
   padding-top: 0;
   padding-bottom: 0;
+}
+
+.logo-footer .nav_color_light {
+  color: #fff;
 }
 
 .footer-card-center {
@@ -759,35 +769,8 @@ ul {
   font-weight: 700;
 }
 
-.footer-social {
+.social-link_background-color_dark {
   background-color: rgba(255, 255, 255, 0.1);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  text-align: center;
-  padding: 12px;
-}
-
-.footer-social__link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(255, 255, 255, 0.1);
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  text-align: center;
-  padding: 12px;
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer-social__link:hover, .footer-social__link:focus {
-  background-color: #2196f3;
 }
 
 .footer-social__logo {
