--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -3,14 +3,12 @@
   justify-content: center;
   align-items: center;
 }
-.social-item:not(:last-child) {
-  margin-right: 10px;
-}
+
 .social-link {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: $white-color;
+  background-color: transparent;
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -22,4 +20,7 @@
   &:hover {
     background-color: $accent-color;
   }
+}
+.social-item:not(:last-child) {
+  margin-right: 10px;
 }
