--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -22,6 +22,13 @@
     margin-left: auto;
   }
 }
+.logo-header {
+  padding-top: 24px;
+  padding-bottom: 25px;
+  & .nav_color_dark {
+    color: #000 !important;
+  }
+}
 
 .active {
   position: relative;
