--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,17 +1,10 @@
+@import "./base/reset";
 @import "./utils/variables";
+@import "./utils/breakpoints";
 @import "./utils/hidden";
 
 @import "./base/common";
 @import "./base/container";
-@import "./base/reset";
-
-@import "./components/logo";
-@import "./components/backdrop";
-@import "./components/btn";
-@import "./components/modal";
-@import "./components/section_title";
-@import "./components/section";
-@import "./components/social";
 
 @import "./layout/header";
 @import "./layout/hero";
@@ -21,3 +14,11 @@
 @import "./layout/team";
 @import "./layout/customers";
 @import "./layout/footer";
+
+@import "./components/logo";
+@import "./components/backdrop";
+@import "./components/btn";
+@import "./components/modal";
+@import "./components/section_title";
+@import "./components/section";
+@import "./components/social";
