--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,5 +1,14 @@
 .container {
-  max-width: 1200px;
+  width: 100%;
   margin: 0 auto;
   padding: 0 15px;
+  @media screen and (min-width: $mobile) {
+    max-width: 480px;
+  }
+  @media screen and (min-width: $tablet) {
+    max-width: 768px;
+  }
+  @media screen and (min-width: $desktop) {
+    max-width: 1200px;
+  }
 }
