--- a/sass/components/_section_title.scss
+++ b/sass/components/_section_title.scss
@@ -2,7 +2,7 @@
   color: $title-text-color;
   font-weight: 700;
   font-size: 36px;
-  line-height: 42px;
+  line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 50px;
