--- a/css/main.css
+++ b/css/main.css
@@ -219,23 +219,49 @@ body {
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/background.jpg");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 1600px 600px;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  background-size: 480px 400px;
+  padding-top: 118px;
+  padding-bottom: 118px;
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    background-size: 768px 400px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    background-size: 1600px 600px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 
 .hero__title {
   color: #fff;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  margin-bottom: 30px;
-  max-width: 700px;
-  margin: 0 auto;
-  margin-bottom: 30px;
+  max-width: 360px;
+  margin: 0 auto 30px auto;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    font-size: 44px;
+    line-height: 1.36;
+    margin: 0 auto 30px auto;
+    max-width: 700px;
+  }
 }
 
 .hero .btn:hover,
@@ -409,8 +435,30 @@ body {
 
 /* Features */
 .feature__list {
-  display: flex;
-  justify-content: space-between;
+  display: unset;
+  flex-wrap: unset;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+@media screen and (min-width: 768px) {
+  .feature__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .feature__list {
+    flex-wrap: unset;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .feature__item:last-child .feature__iconbox {
+    margin-right: 0;
+  }
 }
 
 .feature__title {
@@ -426,13 +474,27 @@ body {
 .feature__iconbox {
   display: inline-block;
   background: #f5f4fa;
-  width: 270px;
+  width: 100%;
+  margin-right: unset;
   height: 120px;
   border-radius: 4px;
   margin-bottom: 30px;
   text-align: center;
   padding-top: 25px;
   padding-bottom: 25px;
+}
+
+@media screen and (min-width: 768px) {
+  .feature__iconbox {
+    width: calc((768px - 30px) / 2);
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .feature__iconbox {
+    width: calc((1200px - 30px * 3) / 4);
+  }
 }
 
 .feature__text {
@@ -831,12 +893,12 @@ body {
 }
 
 .section {
-  padding: 60px auto;
+  padding: 60px 0;
 }
 
 @media screen and (min-width: 1200px) {
   .section {
-    padding: 95px auto !important;
+    padding: 95px 0;
   }
 }
 
