--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -121,12 +121,12 @@ ul {
 }
 
 .section {
-  padding: 60px auto;
+  padding: 60px 0;
 }
 
 @media screen and (min-width: 1200px) {
   .section {
-    padding: 95px auto !important;
+    padding: 95px 0;
   }
 }
 
