--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,34 +1,56 @@
 /* Features */
 .feature {
   &__list {
+    display: unset;
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+  @media screen and (min-width: $tablet) {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
   }
-  &__title {
-    color: $title-text-color;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    margin-bottom: 10px;
+  @media screen and (min-width: $desktop) {
+    flex-wrap: unset;
   }
-  &__iconbox {
-    display: inline-block;
-    background: #f5f4fa;
-    width: 270px;
-    height: 120px;
-    border-radius: 4px;
-    margin-bottom: 30px;
-    text-align: center;
-    padding-top: 25px;
-    padding-bottom: 25px;
+
+  &__item {
+    @media screen and (min-width: $tablet) {
+      margin-right: 15px;
+      margin-left: 15px;
+    }
   }
-  &__text {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    width: 270px;
-  }
+}
+&__title {
+  color: $title-text-color;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+&__iconbox {
+  display: inline-block;
+  background: #f5f4fa;
+  width: 100%;
+  // @media screen and (min-width: $tablet) {
+  //   width: calc((768px - 30px) / 2);
+  // }
+  // @media screen and (min-width: $desktop) {
+  //   width: calc((1200px - 30px * 3) / 4);
+  // }
+  height: 120px;
+  border-radius: 4px;
+  margin-bottom: 30px;
+  text-align: center;
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+&__text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  width: 100%;
 }
